--- a/components/banner.html
+++ b/components/banner.html
@@ -1,12 +1,12 @@
-<!-- Book 2 Banner -->
+<!-- Book 3 Banner -->
 <div id="book2-banner" class="book2-banner">
     <div class="banner-content">
         <div class="banner-text">
             <span class="banner-badge">OUT NOW!</span>
-            <span class="banner-title">Book 2: The Safari Tourist Invasion</span>
+            <span class="banner-title">Book 3: The Meeting - The Hippocampus</span>
             <span class="banner-subtitle">available on Amazon</span>
         </div>
-        <a href="https://www.amazon.co.uk/ARCHIE-BERT-SAFARI-TOURIST-INVASION/dp/B0GDWR7R9T" target="_blank" class="banner-btn">
+        <a href="https://amazon.com/ARCHIE-BERT-3-MEETING-HIPPOCAMPUS/dp/B0GMZFX73B" target="_blank" class="banner-btn">
             <i class="fas fa-shopping-cart"></i>
             Buy Now
         </a>
