--- a/components/footer.html
+++ b/components/footer.html
@@ -18,32 +18,23 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="books.html">Books</a></li>
                     <li><a href="characters.html">Characters</a></li>
-                    <li><a href="videos.html">Videos</a></li>
+                    <!--<li><a href="videos.html">Videos</a></li>-->
                 </ul>
             </div>
             
             <div class="footer-section">
                 <h4>Support</h4>
                 <ul class="footer-links">
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="support.html">Donate</a></li>
+                    <!--<li><a href="about.html">About Us</a></li>-->
+                    <!--<li><a href="support.html">Support Us</a></li>-->
                     <li><a href="mailto:hello@archieandbert.com">Contact</a></li>
-                    <li><a href="privacy.html">Privacy</a></li>
                 </ul>
             </div>
             
-            <div class="footer-section">
-                <h4>Get the Book</h4>
-                <a href="https://www.amazon.co.uk/Archie-Bert-Mr-Stephen-MORRIS/dp/B0G51VD5V4" target="_blank" class="btn btn-primary btn-small">
-                    Buy on Amazon
-                </a>
-                <p class="footer-note">Available in paperback and digital formats</p>
-            </div>
         </div>
         
         <div class="footer-bottom">
             <p>&copy; 2026 Archie & Bert Adventures. All rights reserved.</p>
-            <p>Made with ❤️ for young adventurers everywhere</p>
         </div>
     </div>
 </footer>
