--- a/components/navbar.html
+++ b/components/navbar.html
@@ -10,8 +10,8 @@
             <li><a href="index.html" class="nav-link">Home</a></li>
             <li><a href="books.html" class="nav-link">Books</a></li>
             <li><a href="characters.html" class="nav-link">Characters</a></li>
-            <li><a href="videos.html" class="nav-link">Videos</a></li>
-            <li><a href="about.html" class="nav-link">About</a></li>
+            <!-- <li><a href="videos.html" class="nav-link">Videos</a></li> -->
+            <!--<li><a href="about.html" class="nav-link">About</a></li>-->
             <li><a href="support.html" class="nav-link">Support</a></li>
         </ul>
         <div class="hamburger">
